# azure-uamqp-c

./: .gitignore  .gitmodules  CMakeLists.txt  dependencies-test.cmake  dependencies.cmake  readme.md
build_all/linux/: build.sh
build_all/mbed/: CMakeLists.txt  azure_uamqp_c_filelist.txt  build.cmd
build_all/windows/: build.cmd
devdoc/: amqp_frame_codec_requirements.md  amqp_management_requirements.md  amqp_value_requirements.md  amqpvalue_requirements.md  async_operation_requirements.md  cbs_requirements.md  connection_requirements.md  frame_codec_requirements.md  header_detect_io_requirements.md  link_requirements.md  message_requirements.md  sasl_anonymous_requirements.md  sasl_frame_codec_requirements.md  sasl_mechanism_requirements.md  sasl_plain_requirements.md  sasl_server_io_requirements.md  sasl_server_mechanism_requirements.md  saslclientio_requirements.md  session_requirements.md  wsio_requirements.docm  wsio_requirements.md
inc/: amqp_definitions.h  amqpvalue_to_string.h  connection.h  consolelogger.h  frame_codec.h  header_detect_io.h  link.h  logger.h  message.h  message_receiver.h  message_sender.h  messaging.h  sasl_anonymous.h  sasl_mechanism.h  sasl_mssbcbs.h  sasl_plain.h  saslclientio.h  session.h  wsio.h
inc/azure_uamqp_c/: amqp_definitions.h  amqp_definitions_accepted.h  amqp_definitions_address_string.h  amqp_definitions_amqp_sequence.h  amqp_definitions_amqp_value.h  amqp_definitions_application_properties.h  amqp_definitions_attach.h  amqp_definitions_begin.h  amqp_definitions_close.h  amqp_definitions_data.h  amqp_definitions_delivery_number.h  amqp_definitions_delivery_tag.h  amqp_definitions_detach.h  amqp_definitions_disposition.h  amqp_definitions_end.h  amqp_definitions_error.h  (+61 more)
jenkins/: linux_c_gcc44.sh  osx_c.sh  raspberrypi_c.sh  windows_c.cmd  windows_vs2008_c.cmd
mbed/: tickcounter.c  tickcounter.h
samples/: CMakeLists.txt
samples/eh_sender_with_sas_token_sample/: CMakeLists.txt  main.c
samples/local_client_sample/: CMakeLists.txt  main.c
samples/local_server_sample/: CMakeLists.txt  main.c
samples/local_server_tls_sample/: CMakeLists.txt  main.c  tls_server_io_schannel.c
samples/message_receiver_sample/: CMakeLists.txt  main.c
samples/message_sender_sample/: CMakeLists.txt  main.c
samples/message_sender_sample/mbed/: CMakeLists.txt
samples/mssbcbs_sample/: CMakeLists.txt  main.c
samples/websockets_sample/: CMakeLists.txt  iothub_certs.c  main.c
src/: amqp_definitions.c  amqp_frame_codec.c  amqp_management.c  amqpalloc.c  amqpvalue.c  amqpvalue_to_string.c  async_operation.c  cbs.c  connection.c  consolelogger.c  frame_codec.c  header_detect_io.c  io.c  link.c  message.c  message_receiver.c  message_sender.c  messaging.c  platform_win32.c  sasl_anonymous.c  sasl_frame_codec.c  sasl_mechanism.c  sasl_mssbcbs.c  sasl_plain.c  sasl_server_mechanism.c  saslclientio.c  session.c  socket_listener_berkeley.c  socket_listener_win32.c  wsio.c
tests/: CMakeLists.txt  amqp_definitions_mocks.h  valgrind_suppressions.supp
tests/amqp_frame_codec_unittests/: CMakeLists.txt  amqp_frame_codec_unittests.cpp  main.c
tests/amqp_frame_codec_ut/: CMakeLists.txt  amqp_frame_codec_ut.c  amqp_frame_codec_ut.cpp
tests/amqp_management_ut/: CMakeLists.txt  amqp_management_ut.c
tests/amqpvalue_limits_unittests/: CMakeLists.txt  amqpvalue_limits_unittests.cpp  main.c
tests/amqpvalue_unittests/: CMakeLists.txt  amqpvalue_unittests.cpp  main.c
tests/amqpvalue_ut/: CMakeLists.txt  amqpvalue_ut.c  amqpvalue_ut.cpp
tests/async_operation_ut/: CMakeLists.txt  async_operation_ut.c
tests/cbs_ut/: CMakeLists.txt  cbs_ut.c
tests/connection_unittests/: CMakeLists.txt  connection_unittests.cpp  main.c
tests/connection_ut/: CMakeLists.txt  connection_ut.c  connection_ut.cpp
tests/frame_codec_unittests/: CMakeLists.txt  frame_codec_unittests.cpp  main.c
tests/frame_codec_ut/: CMakeLists.txt  frame_codec_ut.c  frame_codec_ut.cpp
tests/header_detect_io_ut/: CMakeLists.txt  header_detect_io_ut.c
tests/iothub_e2e/: CMakeLists.txt  iothub_e2e.c
tests/link_ut/: CMakeLists.txt  link_ut.c  main.c
tests/local_client_server_tcp_e2e/: CMakeLists.txt  local_client_server_tcp_e2e.c  main.c
tests/local_client_server_tcp_perf/: CMakeLists.txt  local_client_server_tcp_perf.c
tests/message_unittests/: CMakeLists.txt  main.c  message_unittests.cpp
tests/message_ut/: CMakeLists.txt  message_ut.c  message_ut.cpp
tests/sasl_anonymous_unittests/: CMakeLists.txt  main.c  sasl_anonymous_unittests.cpp
tests/sasl_anonymous_ut/: CMakeLists.txt  sasl_anonymous_ut.c  sasl_anonymous_ut.cpp
tests/sasl_frame_codec_unittests/: CMakeLists.txt  main.c  sasl_frame_codec_unittests.cpp
tests/sasl_frame_codec_ut/: CMakeLists.txt  sasl_frame_codec_ut.c  sasl_frame_codec_ut.cpp
tests/sasl_mechanism_unittests/: CMakeLists.txt  main.c  sasl_mechanism_unittests.cpp
tests/sasl_mechanism_ut/: CMakeLists.txt  sasl_mechanism_ut.c  sasl_mechanism_ut.cpp
tests/sasl_plain_unittests/: CMakeLists.txt  main.c  sasl_plain_unittests.cpp
tests/sasl_plain_ut/: CMakeLists.txt  sasl_plain_ut.c  sasl_plain_ut.cpp
tests/sasl_server_mechanism_ut/: CMakeLists.txt  sasl_server_mechanism_ut.c
tests/saslclientio_unittests/: CMakeLists.txt  main.c  saslclientio_unittests.cpp
tests/saslclientio_ut/: CMakeLists.txt  saslclientio_ut.c  saslclientio_ut.cpp
tests/session_unittests/: CMakeLists.txt  main.c  session_unittests.cpp
tests/session_ut/: CMakeLists.txt  session_ut.c  session_ut.cpp
tests/socketio_win32_unittests/: CMakeLists.txt  socketio_win32_unittests.cpp
tests/socketio_win32_ut/: CMakeLists.txt  main.c  socketio_win32_ut.cpp
tests/wsio_unittests/: CMakeLists.txt  main.c  wsio_unittests.cpp
tests/wsio_ut/: wsio_ut.cpp
tools/: kick_jenkins.cmd
uamqp_generator/: Program.cs  amqp_definitions.xml  amqp_definitions_c.cs  amqp_definitions_c.tt  amqp_definitions_h.cs  amqp_definitions_h.tt  amqp_definitions_mocks_h.cs  amqp_definitions_mocks_h.tt  amqp_definitions_type_h.cs  amqp_definitions_type_h.tt  uamqp_generator.csproj
(+23 files in other folders)
